fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -521,18 +521,13 @@ html {
 .modal .modal-container .modal-content .description-content div {
   max-height: 60%;
 }
-.modal
-  .modal-container
-  .modal-content
-  .description-content
-  .description-text::-webkit-scrollbar {
+.modal .modal-container .modal-content .description-content::-webkit-scrollbar {
   width: 5px;
 }
 .modal
   .modal-container
   .modal-content
-  .description-content
-  .description-text::-webkit-scrollbar-thumb {
+  .description-content::-webkit-scrollbar-thumb {
   background: var(--main-color);
   cursor: pointer;
   border-radius: 5px;
@@ -573,14 +568,14 @@ html {
     .modal-container
     .modal-content
     .description-content
-    .description-text::-webkit-scrollbar {
+    div::-webkit-scrollbar {
     width: 5px;
   }
   .modal
     .modal-container
     .modal-content
     .description-content
-    .description-text::-webkit-scrollbar-thumb {
+    div::-webkit-scrollbar-thumb {
     background: var(--main-color);
     cursor: pointer;
     border-radius: 5px;
